# openUI

./: # Code Citations.md  .coverage  .dockerignore  .editorconfig  .env.example  .eslintrc.js  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOY_LXC.md  Dockerfile  INSTALL.md  LICENSE  Makefile  README.md  SECURITY.md  agents.md  coverage.xml  openapi8001.json  openapi8002.json  orchestrator_prompt.md  package-lock.json  package.json  plan.md  pyproject.toml  start-dev.bat  start-dev.sh  test_enhanced_backend.py  test_llm.py  tmp_health_check.py  vitest.config.ts
.github/workflows/: ci-build-test.yml  ci.yml  docker-smoke.yml  release.yml
backend/: __init__.py  main.py  requirements.txt  test_server.py  tmp_health_check.py  tmp_health_err.txt  tmp_health_out.json
backend/agents/: __init__.py
backend/api/: __init__.py  credentials.py  models.py
backend/integrations/: __init__.py  debug.py  enhanced_coordination.py  git.py  llm.py  lsp.py  lsp_enhanced.py  mcp.py  n8n.py  proxmox.py  retrieval.py  tool_discovery.py
deploy/: docker-compose.override.yml  docker-compose.yml  healthcheck.sh  open-deep-coder-health.service  open-deep-coder-health.timer  open-deep-coder.service  slack_webhook_template.txt
deploy/lxc/: launch_openui.sh  launch_openui_idempotent.sh  lxd_profile_example.yaml
deploy/open-deep-coder.service.d/: override.conf
docs/: AGENT_COORDINATION.md  API_DOCUMENTATION.md  DEBUGGING.md  GIT_INTEGRATION.md  INTEGRATION_GUIDE.md  LSP_INTEGRATION.md  MCP_INTEGRATION.md  N8N_INTEGRATION.md  QUICKSTART_INTEGRATIONS.md  README.md  TOOL_DISCOVERY.md
frontend/: index.html  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AgentPanel.tsx  AgentStatusIndicator.tsx  ChatPanel.tsx  Editor.tsx  FileExplorer.tsx  MessageBubble.tsx  ModelSelector.tsx  Sidebar.tsx  StatusBar.tsx  TerminalPanel.tsx
frontend/src/components/advanced/: AdvancedToolsDashboard.tsx  AgentCoordination.tsx  DebugPanel.tsx  GitIntegration.tsx  LSPIntegration.tsx  N8NWorkflowManager.tsx  ProxmoxContainerManager.tsx  README.md  ToolDiscovery.tsx
frontend/src/components/advanced/__tests__/: AdvancedToolsDashboard.test.tsx
frontend/src/components/ui/: Modal.tsx
frontend/src/config/: keybinds.json
frontend/src/services/: api.ts
frontend/src/store/: index.ts
frontend/src/themes/: index.ts
frontend/src/types/: styled-components.d.ts
scripts/: README.md  collect_docker_artifacts.ps1  collect_docker_artifacts.sh  package_release.sh  sanity_check.sh
src/: __init__.py  math_ops.py
src/open_deep_coder/: __init__.py  cli.py  planner.py  retrieval.py  testgen.py
tests/: __init__.py  test_backend_api.py  test_cli_open_deep_coder.py  test_file_ops.py  test_files_and_ws.py  test_health.py  test_health_http.py  test_math_ops.py  test_retrieval_basic.py  test_routellm.py
